# pipeline_health_trend_analyzer_mvp

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  pyproject.toml
examples/health_reports/: health_report_001.json  health_report_002.json  health_report_003.json
src/pipeline_health_trend_analyzer/: __init__.py  analyzer.py  cli.py  contract.py  health_loader.py  report_io.py  summary.py  trend_engine.py
tests/: test_analyzer.py  test_cli.py  test_contract.py  test_health_loader.py  test_package.py  test_report_io.py  test_summary.py  test_trend_engine.py
