[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pipeline-health-trend-analyzer"
version = "0.1.0"
description = "Analyze historical pipeline health reports and generate structured health trend assessments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RADAR_SERVICE" }
]
keywords = [
  "pipeline",
  "health",
  "trend",
  "observability",
  "metrics",
  "runtime",
  "time-series",
  "radar-service"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Monitoring"
]
dependencies = []


[project.scripts]
pipeline-health-trend = "pipeline_health_trend_analyzer.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline_health_trend_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["pipeline_health_trend_analyzer"]

[tool.coverage.report]
show_missing = true
skip_covered = false
